<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ultrasonic_publisher_cpp</name>
    <version>1.0.0</version>
    <description>TODO</description>
    <maintainer email="physism@gmail.com">Sangsu Lee</maintainer>
    <license>TODO</license>
    <url type="website">https://github.com/sslee-bot/</url>
    <url type="bugtracker">https://github.com/sslee-bot/ultrasonic_publisher_cpp/issues</url>
    <author email="physism@gmail.com">Sangsu Lee</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    
    <depend>builtin_interfaces</depend>
    
    <exec_depend>libgpiod-dev</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
